--- a/package.json
+++ b/package.json
@@ -8,17 +8,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/native": "^5.0.0-alpha.27",
+    "@react-navigation/stack": "^5.0.0-alpha.61",
     "expo": "~36.0.0",
+    "expo-facebook": "~8.0.0",
+    "firebase": "^7.7.0",
+    "firestorter": "^2.0.1",
+    "mobx": "4",
+    "mobx-react": "^6.1.5",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "@types/react": "~16.9.0",
     "@types/react-native": "~0.60.23",
-    "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0",
     "typescript": "~3.6.3"
   },
