[web] Add web-build & firebase hosting

--- a/firebase.json
+++ b/firebase.json
@@ -2,5 +2,9 @@
   "firestore": {
     "rules": "firebase/firestore.rules",
     "indexes": "firebase/firestore.indexes.json"
+  },
+  "hosting": {
+    "public": "web-build",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
