--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/stack": "^5.0.0-alpha.61",
     "expo": "~36.0.0",
     "expo-facebook": "~8.0.0",
+    "expo-google-app-auth": "^8.0.0",
     "firebase": "^7.7.0",
     "firestorter": "^2.0.1",
     "mobx": "4",
