[apple] Add apple sign-in button (wip)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.0.0-alpha.27",
     "@react-navigation/stack": "^5.0.0-alpha.61",
-    "expo": "~36.0.0",
+    "expo": "^36.0.2",
+    "expo-apple-authentication": "~2.0.0",
     "expo-facebook": "~8.0.0",
     "expo-google-app-auth": "^8.0.0",
     "firebase": "^7.7.0",
