[storage] Add storage tests, config & UI

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "^36.0.2",
     "expo-apple-authentication": "~2.0.0",
     "expo-facebook": "~8.0.0",
+    "expo-file-system": "~8.0.0",
     "expo-google-app-auth": "^8.0.0",
     "firebase": "^7.7.0",
     "firestorter": "^2.0.1",
