--- a/firebase.json
+++ b/firebase.json
@@ -6,5 +6,8 @@
   "hosting": {
     "public": "web-build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+  },
+  "storage": {
+    "rules": "firebase/storage.rules"
   }
 }
