--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/stack": "^5.0.0-alpha.61",
     "expo": "^36.0.2",
     "expo-apple-authentication": "~2.0.0",
+    "expo-face-detector": "~8.0.0",
     "expo-facebook": "~8.0.0",
     "expo-file-system": "~8.0.0",
     "expo-google-app-auth": "^8.0.0",
