--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "@react-navigation/stack": "^5.0.0-alpha.61",
     "expo": "^36.0.2",
     "expo-apple-authentication": "~2.0.0",
-    "expo-face-detector": "~8.0.0",
+    "expo-face-detector": "file://Users/hein/repos/Expo/expo/packages/expo-face-detector",
     "expo-facebook": "~8.0.0",
     "expo-file-system": "~8.0.0",
-    "expo-firebase-app": "file:.yalc/expo-firebase-app",
     "expo-google-app-auth": "^8.0.0",
     "expokit": "36.0.1",
-    "firebase": "^7.7.0",
+    "firebase": "^7.8.1",
     "firestorter": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
     "jasmine-core": "^3.5.0",
