--- a/app.json
+++ b/app.json
@@ -3,12 +3,8 @@
     "name": "expo-firebase-demo",
     "slug": "expo-firebase-demo",
     "privacy": "public",
-    "sdkVersion": "36.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "sdkVersion": "UNVERSIONED",
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,9 +16,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "usesAppleSignIn": true,
@@ -32,9 +26,24 @@
       "publishManifestPath": "ios/expo-firebase-demo/Supporting/shell-app-manifest.json"
     },
     "android": {
-      "package": "expo.firebase.demo",
+      "package": "nl.ijzerenhein.expofirebasedemo",
+      "googleServicesFile": "./google-services.json",
       "publishBundlePath": "android/app/src/main/assets/shell-app.bundle",
       "publishManifestPath": "android/app/src/main/assets/shell-app-manifest.json"
+    },
+    "web": {
+      "config": {
+        "firebase": {
+          "apiKey": "AIzaSyDKP919EwHK1U3Q1bgJdQEwZCHs_z6lEK4",
+          "authDomain": "expo-firebase-demo.firebaseapp.com",
+          "databaseURL": "https://expo-firebase-demo.firebaseio.com",
+          "projectId": "expo-firebase-demo",
+          "storageBucket": "expo-firebase-demo.appspot.com",
+          "messagingSenderId": "192261076942",
+          "appId": "1:192261076942:web:0bc88d1971ffb0c1359d9f",
+          "measurementId": "G-10P86NHER4"
+        }
+      }
     },
     "isDetached": true,
     "detach": {
