--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
-    "@react-navigation/native": "^5.0.0-alpha.27",
-    "@react-navigation/stack": "^5.0.0-alpha.61",
+    "@react-navigation/native": "^5.0.7",
+    "@react-navigation/stack": "^5.0.9",
     "expo": "^36.0.2",
     "expo-apple-authentication": "~2.0.0",
     "expo-face-detector": "file://Users/hein/repos/Expo/expo/packages/expo-face-detector",
