[fix] Fix Google auth on Android

--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": ["**/*"],
+    "userInterfaceStyle": "automatic",
     "ios": {
       "supportsTablet": true,
       "usesAppleSignIn": true,
