--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "expo-apple-authentication": "~2.0.0",
     "expo-facebook": "~8.0.0",
     "expo-file-system": "~8.0.0",
+    "expo-firebase-analytics": "file:.yalc/expo-firebase-analytics",
+    "expo-firebase-recaptcha": "file:.yalc/expo-firebase-recaptcha",
     "expo-google-app-auth": "^8.0.0",
     "expokit": "36.0.1",
-    "firebase": "^7.8.1",
+    "firebase": "^7.13.2",
     "firestorter": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
     "jasmine-core": "^3.5.0",
