--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>192261076942-p337pc6jvgbto403bq7kcm46vqt8osvj.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.192261076942-p337pc6jvgbto403bq7kcm46vqt8osvj</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>192261076942-1c2scbuskb21kv0kj1dkaugb0bn97hqu.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyC1p6F9cHRanCEy7F_5mF2hB9S6reCWKR8</string>
 	<key>GCM_SENDER_ID</key>
