--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-navigation/stack": "^5.0.9",
     "expo": "^37.0.3",
     "expo-apple-authentication": "~2.1.0",
+    "expo-auth-session": "^1.2.1",
     "expo-facebook": "~8.1.0",
     "expo-file-system": "~8.1.0",
     "expo-firebase-analytics": "file:.yalc/expo-firebase-analytics",
     "expo-firebase-recaptcha": "^1.1.0",
     "expo-google-app-auth": "^8.0.0",
+    "expo-web-browser": "^8.2.1",
     "firebase": "7.9.0",
     "firestorter": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
@@ -31,6 +33,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-web": "~0.11.7",
     "react-native-webview": "8.1.1"
   },
   "devDependencies": {
