--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "expo-auth-session": "^1.2.1",
     "expo-facebook": "~8.1.0",
     "expo-file-system": "~8.1.0",
-    "expo-firebase-analytics": "file:.yalc/expo-firebase-analytics",
-    "expo-firebase-recaptcha": "^1.1.0",
+    "expo-firebase-analytics": "^2.5.0",
+    "expo-firebase-recaptcha": "^1.2.0",
     "expo-google-app-auth": "^8.0.0",
     "expo-web-browser": "^8.2.1",
     "firebase": "7.9.0",
