--- a/package.json
+++ b/package.json
@@ -8,40 +8,40 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.0.7",
     "@react-navigation/stack": "^5.0.9",
-    "expo": "^37.0.3",
-    "expo-apple-authentication": "~2.1.0",
-    "expo-auth-session": "^1.2.1",
-    "expo-facebook": "~8.1.0",
-    "expo-file-system": "~8.1.0",
-    "expo-firebase-analytics": "^2.5.0",
+    "expo": "^39.0.0",
+    "expo-apple-authentication": "~2.2.1",
+    "expo-auth-session": "~2.0.0",
+    "expo-facebook": "~9.0.0",
+    "expo-file-system": "~9.2.0",
+    "expo-firebase-analytics": "~2.5.0",
     "expo-firebase-recaptcha": "^1.2.0",
     "expo-google-app-auth": "^8.0.0",
-    "expo-web-browser": "^8.2.1",
+    "expo-web-browser": "~8.5.0",
     "firebase": "7.9.0",
     "firestorter": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
     "jasmine-core": "^3.5.0",
     "mobx": "4",
     "mobx-react": "^6.1.5",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7",
-    "react-native-webview": "8.1.1"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-web": "~0.13.7",
+    "react-native-webview": "10.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.17",
-    "babel-preset-expo": "~8.1.0",
-    "typescript": "~3.8.3"
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "babel-preset-expo": "^8.3.0",
+    "typescript": "~3.9.2"
   },
   "private": true
 }
