--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.0.7",
     "@react-navigation/stack": "^5.0.9",
-    "expo": "^39.0.0",
-    "expo-apple-authentication": "~2.2.1",
-    "expo-auth-session": "~2.0.0",
-    "expo-facebook": "~9.0.0",
-    "expo-file-system": "~9.2.0",
-    "expo-firebase-analytics": "~2.5.0",
+    "expo": "^40.0.0",
+    "expo-apple-authentication": "~2.2.2",
+    "expo-auth-session": "~3.0.0",
+    "expo-facebook": "~9.1.0",
+    "expo-file-system": "~9.3.0",
+    "expo-firebase-analytics": "~2.6.0",
     "expo-firebase-recaptcha": "^1.2.0",
     "expo-google-app-auth": "^8.0.0",
-    "expo-web-browser": "~8.5.0",
+    "expo-web-browser": "~8.6.0",
     "firebase": "7.9.0",
     "firestorter": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
@@ -29,20 +29,20 @@
     "mobx-react": "^6.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.7",
-    "react-native-webview": "10.7.0"
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "11.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "babel-preset-expo": "^8.3.0",
-    "typescript": "~3.9.2"
+    "babel-preset-expo": "8.3.0",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
