--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
   "dependencies": {
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.0.7",
-    "@react-navigation/stack": "^5.0.9",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "expo": "^40.0.0",
     "expo-apple-authentication": "~2.2.2",
     "expo-auth-session": "~3.0.0",
     "expo-facebook": "~9.1.0",
     "expo-file-system": "~9.3.0",
     "expo-firebase-analytics": "~2.6.0",
-    "expo-firebase-recaptcha": "^1.2.0",
+    "expo-firebase-recaptcha": "^1.3.0",
     "expo-google-app-auth": "^8.0.0",
     "expo-web-browser": "~8.6.0",
     "firebase": "7.9.0",
-    "firestorter": "^2.0.1",
+    "firestorter": "^3.0.1",
     "immutable": "^4.0.0-rc.12",
     "jasmine-core": "^3.5.0",
-    "mobx": "4",
-    "mobx-react": "^6.1.5",
+    "mobx": "^6.0.4",
+    "mobx-react": "^7.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
