--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-firebase-analytics": "~2.6.0",
     "expo-firebase-recaptcha": "^1.3.0",
     "expo-google-app-auth": "^8.0.0",
+    "expo-random": "^10.0.0",
     "expo-web-browser": "~8.6.0",
     "firebase": "7.9.0",
     "firestorter": "^3.0.1",
