--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "strict": true,
+    "target": "ESNext"
   }
 }
